@@ -1,5 +1,5 @@
 /* EmbeddedWindow.java --
-   Copyright (C) 2003 Free Software Foundation, Inc.
+   Copyright (C) 2003, 2004 Free Software Foundation, Inc.
 
 This file is part of GNU Classpath.
 
@@ -107,7 +107,7 @@ public class EmbeddedWindow extends Frame
     catch (NoSuchFieldException e)
       {
 	// This should never happen.
-  }
+      }
 
     super.addNotify();
   }
